# deconz-rs

./: Cargo.toml  README.md
src/: connection.rs  groups.rs  lib.rs  light.rs  token_creation.rs
src/endpoints/: configuration.rs  groups.rs  light.rs  mod.rs  rules.rs  scenes.rs  schedules.rs
src/test-api-responses/: change-password.json  create-group.json  delete-group.json  get-all-groups.json  get-all-lights.json  get-configuration.json  get-group-attributes.json  modify-config.json  reset-gateway.json  set-group-attributes.json  set-group-state.json  set-light-error.json  set-light-success.json  update-software.json
