[package]
name = "deconz-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", ] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0" }
url = { version = "2.3" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
# thiserror = "1.0"
serde_repr = "0.1"

[dev-dependencies]
httpmock = "0.6"
